--- a/index.html
+++ b/index.html
@@ -2,105 +2,49 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Evolución Biomédica</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     :root {
-      --green-light: #d4edda;
-      --green: #28a745;
-      --green-dark: #1e7e34;
-      --blue-light: #d1ecf1;
-      --blue: #17a2b8;
-      --blue-dark: #117a8b;
+      --green-light: #d4edda; --green: #28a745; --green-dark: #1e7e34;
+      --blue-light: #d1ecf1; --blue: #17a2b8; --blue-dark: #117a8b;
       --danger: #f5576c;
-      --background: linear-gradient(135deg, #e8f5e9 0%, #e3f2fd 100%);
+      --background: linear-gradient(135deg,#e8f5e9 0%,#e3f2fd 100%);
     }
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body {
-      font-family:'Poppins',sans-serif;
-      background: var(--background);
-      color: #333;
-      min-height:100vh;
-    }
-    .selector-container {
-      position:fixed; top:20px; right:20px;
-      background:var(--green-light); padding:12px 18px;
-      border-radius:10px; box-shadow:0 6px 16px rgba(0,0,0,0.1);
-      z-index:1001;
-    }
-    .selector-container label { font-weight:600; margin-right:8px; color:var(--green-dark); }
-    .selector-container select {
-      font-family:'Poppins',sans-serif; font-size:0.95em;
-      border-radius:6px; padding:6px 12px;
-      border:2px solid var(--blue-light); background:#fff;
-      box-shadow:0 1px 4px rgba(0,0,0,0.1);
-      transition:border .2s, background .2s;
-    }
-    .selector-container select:focus { border-color:var(--green); background:#f8fff9; outline:none; }
-    .container {
-      max-width:1250px; margin:100px auto 40px;
-      background:#fff; border-radius:20px;
-      box-shadow:0 20px 48px rgba(0,0,0,0.07);
-      overflow:hidden; padding-bottom:30px;
-      animation:fadeIn 1s ease-out;
-    }
-    @keyframes fadeIn { from{opacity:0;transform:translateY(20px);} to{opacity:1;transform:none;} }
-    .header {
-      background:var(--blue); color:white;
-      padding:30px 25px 20px; display:flex;
-      align-items:center; justify-content:center; gap:20px;
-    }
-    .header img { height:70px; width:auto; }
-    .header h1 { font-size:2.2em; font-weight:700; letter-spacing:-1px; }
-    .header p { font-size:1.1em; opacity:0.9; margin-top:4px; }
-    .grid {
-      display:grid; grid-template-columns:repeat(auto-fit,minmax(340px,1fr));
-      gap:36px; padding:40px;
-    }
-    .card {
-      background:#fff; border-radius:15px;
-      box-shadow:0 6px 24px rgba(0,0,0,0.05),0 1px 6px rgba(0,0,0,0.08);
-      padding:20px; display:flex; flex-direction:column; align-items:center;
-      transition:transform .2s,box-shadow .2s;
-    }
-    .card:hover { transform:translateY(-5px); box-shadow:0 12px 44px rgba(0,0,0,0.15); }
-    .card h3 { font-size:1.2em; color:var(--green-dark); margin-bottom:18px; font-weight:700; letter-spacing:0.5px; }
-    .chart-container { width:100%; min-height:225px; }
-    .summary-report {
-      background:#f5f9f7; border-top:4px solid var(--green);
-      margin:40px 20px 20px; padding:30px 20px; border-radius:0 0 20px 20px;
-    }
-    .summary-report h2 { text-align:center; color:var(--green-dark); margin-bottom:10px; font-size:1.8em; }
-    .summary-dates { text-align:center; margin-bottom:20px; color:var(--blue-dark); font-size:0.95em; }
-    .summary-cards {
-      display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:20px;
-    }
-    .summary-card {
-      background:white; border-radius:12px; padding:15px; box-shadow:0 4px 16px rgba(0,0,0,0.05); text-align:center;
-    }
-    .summary-card h4 { font-size:1.1em; margin-bottom:10px; color:var(--blue-dark); }
-    .summary-card .value { font-size:1.2em; font-weight:700; }
-    .summary-card .opt { font-size:0.8em; color:#666; margin-left:4px; }
-    .summary-card .change { font-size:0.95em; margin-top:6px; }
-    .summary-card .diff { font-size:0.9em; color:#444; margin-top:4px; }
-    .positive { color:var(--green-dark); } .negative { color:var(--danger); }
-    @media(max-width:900px){ .container{margin:120px 10px 20px;} .grid{padding:20px;gap:26px;} }
-    @media(max-width:600px){
-      .selector-container{position:static;margin:10px auto;text-align:center;}
-      .header{flex-direction:column;padding:20px 6vw 15px;}
-      .header h1{font-size:1.8em;} .grid{display:block;padding:10px 2vw;}
-      .card{margin-bottom:26px;}
-    }
-    ::-webkit-scrollbar{width:6px;} ::-webkit-scrollbar-track{background:var(--blue-light);border-radius:3px;}
-    ::-webkit-scrollbar-thumb{background:var(--green);border-radius:3px;}
+    *{margin:0;padding:0;box-sizing:border-box;}
+    body{font-family:'Poppins',sans-serif;background:var(--background);color:#333;min-height:100vh;}
+    .selector-container{position:fixed;top:20px;right:20px;background:var(--green-light);padding:12px 18px;border-radius:10px;box-shadow:0 6px 16px rgba(0,0,0,0.1);z-index:1001;}
+    .selector-container label{font-weight:600;margin-right:8px;color:var(--green-dark);}
+    .selector-container select{font-size:.95em;border-radius:6px;padding:6px 12px;border:2px solid var(--blue-light);background:#fff;box-shadow:0 1px 4px rgba(0,0,0,0.1);transition:border .2s,background .2s;}
+    .selector-container select:focus{border-color:var(--green);background:#f8fff9;outline:none;}
+    .container{max-width:1250px;margin:100px auto 40px;background:#fff;border-radius:20px;box-shadow:0 20px 48px rgba(0,0,0,0.07);overflow:hidden;padding-bottom:30px;animation:fadeIn 1s ease-out;}
+    @keyframes fadeIn{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:none;}}
+    .header{background:var(--blue);color:#fff;padding:30px 25px 20px;display:flex;align-items:center;justify-content:center;gap:20px;}
+    .header img{height:70px;}
+    .header h1{font-size:2.2em;font-weight:700;letter-spacing:-1px;}
+    .header p{font-size:1.1em;opacity:.9;margin-top:4px;}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(340px,1fr));gap:36px;padding:40px;}
+    .card{background:#fff;border-radius:15px;box-shadow:0 6px 24px rgba(0,0,0,0.05),0 1px 6px rgba(0,0,0,0.08);padding:20px;display:flex;flex-direction:column;align-items:center;transition:transform .2s,box-shadow .2s;}
+    .card:hover{transform:translateY(-5px);box-shadow:0 12px 44px rgba(0,0,0,0.15);}
+    .card h3{font-size:1.2em;color:var(--green-dark);margin-bottom:18px;font-weight:700;letter-spacing:.5px;}
+    .chart-container{width:100%;min-height:225px;}
+    .summary-report{background:#f5f9f7;border-top:4px solid var(--green);margin:40px 20px 20px;padding:30px 20px;border-radius:0 0 20px 20px;}
+    .summary-report h2{text-align:center;color:var(--green-dark);margin-bottom:10px;font-size:1.8em;}
+    .summary-dates{text-align:center;margin-bottom:20px;color:var(--blue-dark);font-size:.95em;}
+    .summary-table{width:100%;border-collapse:collapse;margin-top:10px;}
+    .summary-table th,.summary-table td{border:1px solid #ddd;padding:8px;text-align:center;}
+    .summary-table th{background:var(--blue-light);color:#000;}
+    .positive{color:var(--green-dark);} .negative{color:var(--danger);}
+    @media(max-width:900px){.container{margin:120px 10px 20px;} .grid{padding:20px;gap:26px;}}
+    @media(max-width:600px){.selector-container{position:static;margin:10px auto;text-align:center;} .header{flex-direction:column;padding:20px 6vw 15px;} .header h1{font-size:1.8em;} .grid{display:block;padding:10px 2vw;} .card{margin-bottom:26px;}}
   </style>
 </head>
 <body>
   <div class="selector-container">
     <label for="clienteSelect">Cliente:</label>
-    <select id="clienteSelect"><option value="">—Cargando—</option></select>
+    <select id="clienteSelect"><option>—Cargando—</option></select>
   </div>
   <div class="container">
     <div class="header">
@@ -114,12 +58,20 @@
     <div class="summary-report">
       <h2>📋 Resumen de Progreso</h2>
       <div class="summary-dates" id="summaryDates"></div>
-      <div class="summary-cards" id="summaryCards"></div>
+      <table class="summary-table" id="summaryTable">
+        <thead>
+          <tr>
+            <th>Métrica</th><th>Inicial</th><th>Final</th><th>Diferencia</th><th>Óptimo</th><th>Estado</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
   </div>
+
   <script>
-    const SHEET_URL = 'https://script.google.com/macros/s/AKfycbw4p-6JUt9kx5K5qbFSWffaX9FtEQ0tK_ptRrYTSlZzIr-MxlAZPEIr0MK22fvDboGrUw/exec';
-    let charts={}, fechasGlobal=[];
+    const SHEET_URL='https://script.google.com/macros/s/AKfycbw4p-6JUt9kx5K5qbFSWffaX9FtEQ0tK_ptRrYTSlZzIr-MxlAZPEIr0MK22fvDboGrUw/exec';
+    let charts={},fechasGlobal=[];
 
     function drawChart(id,data,color){
       const ctx=document.getElementById(id).getContext('2d');
@@ -139,7 +91,7 @@
     function renderizarGraficos(datos){
       datos.sort((a,b)=>new Date(a.Fecha)-new Date(b.Fecha));
       fechasGlobal=datos.map(r=>new Date(r.Fecha).toLocaleDateString('es-ES',{month:'short',day:'numeric'}));
-      const m=key=>datos.map(r=>parseFloat(r[key])||0);
+      const m=k=>datos.map(r=>parseFloat(r[k])||0);
       const metrics=[
         {key:'Peso corporal Kg',id:'pesoChart',color:'#28a745',label:'Peso (Kg)'},
         {key:'BMI (Índice Masa Corporal)',id:'bmiChart',color:'#17a2b8',label:'BMI'},
@@ -150,96 +102,60 @@
         {key:'Edad metabólica',id:'edadChart',color:'#17a2b8',label:'Edad Metabólica'},
         {key:'Nivel de grasa visceral',id:'visceralChart',color:'#f5576c',label:'Grasa Visceral'}
       ];
-      document.getElementById('chartsGrid').innerHTML=metrics.map(met=>`
-        <div class="card">
-          <h3>${met.label}</h3>
-          <div class="chart-container"><canvas id="${met.id}"></canvas></div>
-        </div>`).join('');
+      const grid=document.getElementById('chartsGrid');
+      grid.innerHTML=metrics.map(met=>`
+        <div class="card"><h3>${met.label}</h3><div class="chart-container"><canvas id="${met.id}"></canvas></div></div>
+      `).join('');
       metrics.forEach(met=>drawChart(met.id,m(met.key),met.color));
     }
 
     function generarResumen(datos){
-      if(datos.length<2) return;
-      const first=datos[0], last=datos[datos.length-1];
+      if(datos.length<2)return;
+      const first=datos[0],last=datos[datos.length-1];
       document.getElementById('summaryDates').textContent=
-        `De ${new Date(first.Fecha).toLocaleDateString()} a ${new Date(last.Fecha).toLocaleDateString()}`;
+        `Desde ${new Date(first.Fecha).toLocaleDateString()} hasta ${new Date(last.Fecha).toLocaleDateString()}`;
       const metrics=[
         {key:'Peso corporal Kg',label:'Peso (Kg)',optimal:'IMC normal',classify:()=>null},
         {key:'BMI (Índice Masa Corporal)',label:'BMI',optimal:'18.5–24.9',classify:v=>v<18.5?'Bajo peso':v<25?'Normal':v<30?'Sobrepeso':'Obesidad'},
         {key:'% Grasa corporal',label:'% Grasa',optimal:'Hombres:10–20%, Mujeres:18–28%',classify:v=>v<10?'Bajo':v<=20?'Saludable':v<=28?'Saludable':'Alto'},
         {key:'Masa muscular Kg',label:'Masa Muscular',optimal:'Varía según edad y sexo',classify:()=>null},
-        {key:'BMR (Tasa Metabólica Basal)',label:'BMR (kcal)',optimal:'Depende de edad/s.',classify:()=>null},
+        {key:'BMR (Tasa Metabólica Basal)',label:'BMR',optimal:'Depende de edad/s.',classify:()=>null},
         {key:'Edad metabólica',label:'Edad Metabólica',optimal:'<= Edad real',classify:()=>null},
         {key:'Nivel de grasa visceral',label:'Grasa Visceral',optimal:'1–9 saludable',classify:v=>v<=9?'Saludable':v<=14?'Moderado':'Alto riesgo'}
       ];
-      const container=document.getElementById('summaryCards');
-      container.innerHTML='';
+      const tbody=document.querySelector('#summaryTable tbody');
+      tbody.innerHTML='';
       metrics.forEach(met=>{
-        const a=parseFloat(first[met.key]), b=parseFloat(last[met.key]);
-        if(isNaN(a)||isNaN(b)) return;
-        const diff=(b-a).toFixed(1), sign=diff>=0?'+':'';
-        const status=met.classify(b) || (diff==='0.0'?'Sin cambio':diff>0?'Subió':'Bajó');
-        const card=document.createElement('div');
-        card.className='summary-card';
-        card.innerHTML=`
-          <h4>${met.label}</h4>
-          <div class="value">Último: ${b}<span class="opt">(${met.optimal})</span></div>
-          <div class="change ${['Normal','Saludable','Saludable'].includes(status)?'positive':'negative'}">${status}</div>
-          <div class="diff">${sign}${diff}</div>
+        const a=parseFloat(first[met.key]),b=parseFloat(last[met.key]);
+        if(isNaN(a)||isNaN(b))return;
+        const diff=(b-a).toFixed(1),sign=diff>=0?'+':'';
+        const status=met.classify(b)|| (diff==='0.0'?'Sin cambio':diff>0?'Subió':'Bajó');
+        const tr=document.createElement('tr');
+        tr.innerHTML=`
+          <td>${met.label}</td>
+          <td>${a}</td>
+          <td>${b}</td>
+          <td>${sign}${diff}</td>
+          <td>${met.optimal}</td>
+          <td class="${['Normal','Saludable'].includes(status)?'positive':'negative'}">${status}</td>
         `;
-        container.appendChild(card);
-      });
-      renderMetabolicReport(datos);
-    }
-
-    function evaluarMetabolismo(last){
-      const bio=[];
-      const bmi=parseFloat(last['BMI (Índice Masa Corporal)']);
-      let bmiCat=bmi<18.5?'Bajo peso':bmi<25?'Normal':bmi<30?'Sobrepeso':'Obesidad';
-      bio.push({label:`BMI: ${bmi.toFixed(1)}`,status:bmiCat});
-      const fat=parseFloat(last['% Grasa corporal']);
-      let fatStatus=fat<12?'Bajo':fat<=25?'Saludable':'Alto';
-      bio.push({label:`Grasa corporal: ${fat.toFixed(1)}%`,status:fatStatus});
-      const vis=parseFloat(last['Nivel de grasa visceral']);
-      let visStatus=vis<=9?'Saludable':vis<=14?'Moderado':'Alto';
-      bio.push({label:`Grasa visceral: ${vis}`,status:visStatus});
-      return bio;
-    }
-
-    function renderMetabolicReport(datos){
-      const last=datos[datos.length-1];
-      const bio=evaluarMetabolismo(last);
-      const container=document.getElementById('summaryCards');
-      const title=document.createElement('h3');
-      title.textContent='🧪 Evaluación Metabólica';
-      title.style.gridColumn='1/-1'; title.style.textAlign='center'; title.style.margin='20px 0 10px';
-      container.prepend(title);
-      bio.forEach(item=>{
-        const card=document.createElement('div');
-        card.className='summary-card';
-        card.innerHTML=`
-          <h4>${item.label}</h4>
-          <div class="change ${['Normal','Saludable'].includes(item.status)?'positive':'negative'}">${item.status}</div>
-        `;
-        container.appendChild(card);
+        tbody.appendChild(tr);
       });
     }
 
     async function init(){
-      const allData=await fetch(SHEET_URL).then(r=>r.json());
+      const data=await fetch(SHEET_URL).then(r=>r.json());
       const sel=document.getElementById('clienteSelect');
-      const names=[...new Set(allData.map(r=>(r.Nombre+' '+r.Apellidos).trim()))];
+      const names=[...new Set(data.map(r=>(r.Nombre+' '+r.Apellidos).trim()))];
       sel.innerHTML='<option value="">—Selecciona cliente—</option>';
       names.forEach(n=>sel.appendChild(Object.assign(document.createElement('option'),{value:n,textContent:n})));
       sel.addEventListener('change',()=>{
-        const [nom,...ap]=sel.value.split(' '), apellido=ap.join(' ');
+        const [nom,...ap]=sel.value.split(' '),apellido=ap.join(' ');
         const url=sel.value?`${SHEET_URL}?nombre=${encodeURIComponent(nom)}&apellido=${encodeURIComponent(apellido)}`:SHEET_URL;
-        fetch(url).then(r=>r.json()).then(data=>{renderizarGraficos(data); generarResumen(data);});
+        fetch(url).then(r=>r.json()).then(d=>{renderizarGraficos(d);generarResumen(d);});
       });
-      renderizarGraficos(allData);
-      generarResumen(allData);
+      renderizarGraficos(data); generarResumen(data);
     }
-
     init();
   </script>
 </body>
