--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       --bg: #f4f7fa;
       --card: #ffffff;
       --primary: #4a90e2;
+      --primary-dark: #3b75b1;
       --accent: #50e3c2;
       --warn: #e94e77;
       --text: #34495e;
@@ -20,39 +21,48 @@
     * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family:'Poppins',sans-serif;
-      background: var(--bg);
-      color: var(--text);
+      background:var(--bg);
+      color:var(--text);
       line-height:1.4;
     }
     .container {
-      max-width: 1000px;
-      margin: 40px auto;
-      padding: 0 20px;
+      max-width:1000px;
+      margin:40px auto;
+      padding:0 20px;
     }
     h1 {
-      text-align:center; margin-bottom:20px; font-weight:600;
+      text-align:center;
+      margin-bottom:20px;
+      font-weight:600;
     }
     .filters {
-      display:flex; gap:12px; justify-content:center; margin-bottom:30px;
+      display:flex;
+      gap:12px;
+      justify-content:center;
+      margin-bottom:30px;
     }
     .filters select,
-    .filters input[type=date] {
-      padding:8px 12px; border-radius:6px; border:1px solid #ccc;
-      background:#fff; font-size:.95em;
+    .filters input[type="date"] {
+      padding:8px 12px; border:1px solid #ccc;
+      border-radius:6px; background:#fff;
+      font-size:.95em;
     }
     .summary-cards {
-      display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
-      gap:20px; margin-bottom:30px;
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+      gap:20px;
+      margin-bottom:30px;
     }
     .card {
-      background: var(--card);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
+      background:var(--card);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
       padding:20px;
       text-align:center;
     }
     .card h2 {
-      font-size:1.5em; margin-bottom:8px; color:var(--primary);
+      font-size:1.5em; margin-bottom:8px;
+      color:var(--primary);
     }
     .card p {
       font-size:2em; font-weight:600;
@@ -61,18 +71,18 @@
       display:block; margin-top:6px; color:#777;
     }
     .chart-wrapper {
-      background: var(--card);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
+      background:var(--card);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
       padding:20px; margin-bottom:30px;
     }
     .chart-wrapper canvas {
-      width:100%!important; height:300px!important;
+      width:100% !important; height:300px !important;
     }
     details {
-      background: var(--card);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
+      background:var(--card);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
       padding:10px 20px; margin-bottom:40px;
     }
     summary {
@@ -82,10 +92,25 @@
       width:100%; border-collapse:collapse; margin-top:10px;
     }
     th, td {
-      padding:8px; border-bottom:1px solid #eee; text-align:center; font-size:.9em;
+      padding:8px; border-bottom:1px solid #eee;
+      text-align:center; font-size:.9em;
     }
     th {
-      background: var(--primary); color:#fff;
+      background:var(--primary); color:#fff;
+    }
+    tr:last-child td {
+      border-bottom:none;
+    }
+    .positive {
+      color:var(--accent); font-weight:600;
+    }
+    .negative {
+      color:var(--warn); font-weight:600;
+    }
+    @media(max-width:600px){
+      .filters { flex-direction:column; }
+      .summary-cards { grid-template-columns:1fr; }
+      .chart-wrapper canvas { height:220px !important; }
     }
   </style>
 </head>
@@ -97,34 +122,31 @@
       <input type="date" id="fromDate"/>
       <input type="date" id="toDate"/>
     </div>
-
     <div class="summary-cards">
       <div class="card">
         <h2 id="card-weight">—</h2>
         <p>Kg</p>
-        <small>Peso actual</small>
+        <small>Peso</small>
       </div>
       <div class="card">
         <h2 id="card-bmi">—</h2>
         <p>—</p>
-        <small>Índice de Masa Corporal</small>
+        <small>BMI</small>
       </div>
       <div class="card">
         <h2 id="card-fat">—</h2>
         <p>%</p>
-        <small>Grasa corporal</small>
+        <small>Grasa %</small>
       </div>
       <div class="card">
         <h2 id="card-visceral">—</h2>
         <p>—</p>
-        <small>Grasa visceral</small>
+        <small>Visceral</small>
       </div>
     </div>
-
     <div class="chart-wrapper">
       <canvas id="evolChart"></canvas>
     </div>
-
     <details>
       <summary>Ver datos crudos</summary>
       <table id="dataTable">
@@ -136,16 +158,16 @@
 
   <script>
     const SHEET_URL = 'https://script.google.com/macros/s/.../exec';
-    let rawData = [];
+    let rawData=[];
 
     async function fetchData(params='') {
-      const res = await fetch(SHEET_URL + params);
+      const res=await fetch(SHEET_URL+params);
       return res.json();
     }
 
     function updateSummary(data) {
-      if (!data.length) return;
-      const last = data[data.length - 1];
+      if(!data.length) return;
+      const last=data[data.length-1];
       document.getElementById('card-weight').textContent = parseFloat(last['Peso corporal Kg']).toFixed(1);
       document.getElementById('card-bmi').textContent    = parseFloat(last['BMI (Índice Masa Corporal)']).toFixed(1);
       document.getElementById('card-fat').textContent    = parseFloat(last['% Grasa corporal']).toFixed(1);
@@ -153,62 +175,64 @@
     }
 
     function renderChart(data) {
-      const ctx = document.getElementById('evolChart').getContext('2d');
-      const labels = data.map(r => new Date(r.Fecha).toLocaleDateString());
-      const weight = data.map(r => +r['Peso corporal Kg'] || 0);
-      if (window.eChart) window.eChart.destroy();
-      window.eChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels,
-          datasets: [{ label:'Peso (Kg)', data:weight, borderColor:varPrimary, backgroundColor:varPrimary+'33', fill:true, tension:0.3 }]
-        },
-        options: { responsive:true }
+      const ctx=document.getElementById('evolChart').getContext('2d');
+      const labels=data.map(r=>new Date(r.Fecha).toLocaleDateString());
+      const weight=data.map(r=>parseFloat(r['Peso corporal Kg'])||0);
+      if(window.eChart) window.eChart.destroy();
+      window.eChart=new Chart(ctx,{
+        type:'line',
+        data:{labels,datasets:[{label:'Peso (Kg)',data:weight,borderColor:getComputedStyle(document.documentElement).getPropertyValue('--primary'),backgroundColor:getComputedStyle(document.documentElement).getPropertyValue('--primary')+'33',fill:true,tension:0.3}]},
+        options:{responsive:true}
       });
     }
 
     function renderTable(data) {
-      const tbody = document.querySelector('#dataTable tbody');
-      tbody.innerHTML = '';
-      data.forEach(r => {
-        Object.entries(r).forEach(([k,v]) => {
-          if (k==='Fecha') return;
-          const tr = document.createElement('tr');
-          tr.innerHTML = `<td>${new Date(r.Fecha).toLocaleDateString()}</td><td>${k}</td><td>${v}</td>`;
+      const tbody=document.querySelector('#dataTable tbody');
+      tbody.innerHTML='';
+      data.forEach(r=>{
+        Object.entries(r).forEach(([k,v])=>{
+          if(k==='Fecha') return;
+          const tr=document.createElement('tr');
+          tr.innerHTML=`<td>${new Date(r.Fecha).toLocaleDateString()}</td><td>${k}</td><td>${v}</td>`;
           tbody.appendChild(tr);
         });
       });
     }
 
     async function applyFilter() {
-      const cliente = document.getElementById('clienteSelect').value;
-      let params = cliente ? `?nombre=${encodeURIComponent(cliente.split(' ')[0])}&apellido=${encodeURIComponent(cliente.split(' ')[1]||'')}` : '';
-      const from = document.getElementById('fromDate').value;
-      const to   = document.getElementById('toDate').value;
-      if (from) params += (params?'&':'?') + `from=${from}`;
-      if (to)   params += (params?'&':'?') + `to=${to}`;
-      const data = await fetchData(params);
-      rawData = data;
+      const sel=document.getElementById('clienteSelect');
+      let params='';
+      if(sel.value) {
+        const [n, a]=sel.value.split('|');
+        params=`?nombre=${encodeURIComponent(n)}&apellido=${encodeURIComponent(a)}`;
+      }
+      const from=document.getElementById('fromDate').value;
+      const to=document.getElementById('toDate').value;
+      if(from) params+= (params?'&':'?')+`from=${from}`;
+      if(to)   params+= (params?'&':'?')+`to=${to}`;
+      const data=await fetchData(params);
+      rawData=data;
       updateSummary(data);
       renderChart(data);
       renderTable(data);
     }
 
-    async function init() {
-      rawData = await fetchData();
-      const sel = document.getElementById('clienteSelect');
-      [...new Set(rawData.map(r=>r.Nombre+' '+r.Apellidos))].forEach(n=>{
-        const o=document.createElement('option'); o.value=n; o.textContent=n;
+    async function init(){
+      rawData=await fetchData();
+      const sel=document.getElementById('clienteSelect');
+      const clients=[...new Set(rawData.map(r=>r.Nombre+'|'+r.Apellidos))];
+      clients.forEach(c=>{
+        const [n,a]=c.split('|');
+        const o=document.createElement('option');
+        o.value=c; o.textContent=`${n} ${a}`;
         sel.appendChild(o);
       });
-      sel.addEventListener('change', applyFilter);
-      document.getElementById('fromDate').addEventListener('change', applyFilter);
-      document.getElementById('toDate').addEventListener('change', applyFilter);
+      sel.addEventListener('change',applyFilter);
+      document.getElementById('fromDate').addEventListener('change',applyFilter);
+      document.getElementById('toDate').addEventListener('change',applyFilter);
       applyFilter();
     }
 
-    // variables CSS en JS
-    const varPrimary = getComputedStyle(document.documentElement).getPropertyValue('--primary');
     init();
   </script>
 </body>
